# FluxIDE

./: .gitignore  .gitmodules  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
changelog/: v0.2.0.md  v0.2.1.md  v0.3.0.md  v0.3.1.md  v0.4.0.md  v0.4.1.md
docs/: building.md  contributing.md  editor.md  getting-started.md  preview.md  shortcuts.md  terminal.md
docs/images/: .gitkeep
scripts/: release.sh  run-fluxide.sh  update-compiler.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: FluxIDE.desktop
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: compiler.rs  file_system.rs  mod.rs  terminal.rs
src/components/: ThemeProvider.tsx
src/components/ContextMenu/: ContextMenu.css  ContextMenu.tsx
src/components/DevTools/: DevTools.css  DevTools.tsx
src/components/Editor/: Editor.css  Editor.tsx  EditorTabs.css  EditorTabs.tsx  index.ts
src/components/ElementsPanel/: ElementsPanel.css  ElementsPanel.tsx  index.ts
src/components/FileExplorer/: FileExplorer.css  FileExplorer.tsx  index.ts  (+2 more)
src/data/: flux-components.ts
src/hooks/: useCompiler.ts  useFileSystem.ts  useKeyboardShortcuts.ts  useTerminal.ts
src/stores/: editor-store.ts  file-store.ts  terminal-store.ts  theme-store.ts  visual-editor-store.ts
src/styles/: globals.css
src/themes/: flux-dark.ts  flux-light.ts  forest.ts  index.ts  neon-nights.ts  ocean-breeze.ts  sunset.ts  types.ts
src/types/: file.ts  visual-editor.ts
(+56 files in other folders)
